--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,14 @@
     height: 100vh;
 }
 
+.addChat {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    cursor: pointer;
+    text-align: center;
+}
+
 .chat-wrapper {
     display: flex;
 }
